fixing some alignments/paddings

--- a/mastering-theme/src/css/_custom.scss
+++ b/mastering-theme/src/css/_custom.scss
@@ -69,7 +69,6 @@ header.ml-top-bar {
 .sidebar {
     color: #343a40;
     font-size: 18px;
-    top: 70px;
 
         /* unvisited link */
     & a:link {
